# magnetic-force

./: CMakeLists.txt
fmmtl_minimum/fmmtl/: Expansion.hpp  FMMOptions.hpp  config.hpp
fmmtl_minimum/fmmtl/context/: Context.hpp
fmmtl_minimum/fmmtl/dispatch/: BatchFar.hpp
fmmtl_minimum/fmmtl/dispatch/S2T/: S2T_Blocked_CSR_cu_Multi_GPU.inl  S2T_Blocked_CSR_cu_Multi_GPU.inl~  S2T_Compressed.hpp  S2T_Compressed_cu.inl  S2T_Compressed_cu.inl~  S2T_Compressed_cu_multiple_GPU.inl  S2T_Compressed_cu_multiple_GPU.inl~
fmmtl_minimum/fmmtl/executor/: EvalLists.hpp
fmmtl_minimum/fmmtl/numeric/: norm.hpp
fmmtl_minimum/fmmtl/traversal/: Downward.hpp  Upward.hpp
fmmtl_minimum/fmmtl/tree/: BallTree.hpp  NDTree.hpp
fmmtl_minimum/fmmtl/tree/util/: CountedProxyIterator.hpp
fmmtl_minimum/kernel/: BBFMM.hpp  BarycentricTaylor.hpp  BiotSpherical.hpp  Dipole.kern  DipoleBSpherical.hpp  DipoleFieldSpherical.hpp  DipoleHessianSpherical.hpp  Dipole_B.kern  Dipole_hessian.kern  LaplaceSpherical.hpp
fmmtl_minimum/kernel/Util/: SphericalMultipole3D.hpp
magnetic_solver/: cuda_abstract_vector.cuh  magnetic_force.cu  magnetic_force.cuh  main.cu
